--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
       </ul>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./assets/index.js"></script>
   </body>
 </html>
