--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>_</p>
             <span>___</span>
           </div>
-          <i class="fas fa-volume-up"></i>
+          <i class="fas fa-volume-up" id="playSound"></i>
         </li>
         <div class="content">
           <li class="meaning">
